--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
   <!-- HEADER -->
   <header>
     <div class="logo">
-      <img src="img/logo.png" alt="Queen Studio Logo">
+      <img src="Logo/logo.png" alt="Queen Studio Logo">
     </div>
     <nav>
       <ul>
@@ -28,7 +28,7 @@
     <p>Puedes comunicarte con nosotros vía:</p>
     <div class="contact-links">
       <a href="https://wa.me/528442637285" target="_blank" class="btn whatsapp">WhatsApp</a>
-      <a href="mailto:zapataingrid536@gmail.com" class="btn email">Correo</a>
+      <a href="zapataingrid536@gmail.com" class="btn email">Correo</a>
     </div>
   </section>
 
