--- a/servicios.html
+++ b/servicios.html
@@ -11,7 +11,7 @@
   <!-- HEADER -->
   <header>
     <div class="logo">
-      <img src="img/logo.png" alt="Queen Studio Logo">
+      <img src="Logo/logo.png" alt="Queen Studio Logo">
     </div>
     <nav>
       <ul>
@@ -27,7 +27,7 @@
     <h2>Servicios & Precios</h2>
     <div class="cards">
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1610484829299-2f2fa0b0bbd2?auto=format&fit=crop&w=500&q=80" alt="Corte de cabello">
+        <img src="https://tse1.explicit.bing.net/th/id/OIP.ecB5emskBs8f-obnft4HDgHaEK?cb=12&rs=1&pid=ImgDetMain&o=7&rm=3" alt="Corte de cabello">
         <h3>Corte de Cabello</h3>
         <p>Estilo moderno y personalizado.</p>
         <span>$250 MXN</span>
