--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;700&family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Dancing+Script&family=Sacramento&family=Parisienne&family=Allura&family=Italianno&family=Pinyon+Script&family=Cinzel:wght@400;700&family=Playfair+Display:wght@400;700&family=Cormorant+Garamond:wght@400;700&family=Prata&family=Raleway:wght@400;700&family=Montserrat:wght@400;700&family=Josefin+Sans:wght@400;700&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
 
+  <!-- Open Graph -->
+  <meta property="og:title" content="Queen Studio">
+  <meta property="og:description" content="Sitio web oficial de Queen Studio - Belleza y estilo.">
+  <meta property="og:image" content="Logo/logo.jpg">
+  <meta property="og:url" content="https://tusitio.netlify.app">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Queen Studio">
+  <meta name="twitter:description" content="Sitio web oficial de Queen Studio - Belleza y estilo.">
+  <meta name="twitter:image" content="Logo/logo.jpg">
+
 
 </head>
 <body>
