--- a/servicios.html
+++ b/servicios.html
@@ -33,19 +33,19 @@
         <span>$250 MXN</span>
       </div>
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1610484829299-2f2fa0b0bbd2?auto=format&fit=crop&w=500&q=80" alt="Manicure & Pedicure">
+        <img src="https://tse3.mm.bing.net/th/id/OIP.i1VJtMS1tLM2YdGWfCGRiQHaE7?cb=12&rs=1&pid=ImgDetMain&o=7&rm=3" alt="Manicure & Pedicure">
         <h3>Manicure & Pedicure</h3>
         <p>Relajación y belleza en tus manos y pies.</p>
         <span>$400 MXN</span>
       </div>
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1610484829299-2f2fa0b0bbd2?auto=format&fit=crop&w=500&q=80" alt="Maquillaje">
+        <img src="https://tse1.explicit.bing.net/th/id/OIP.46F02gSYJIDmi1yaqhQ6bQHaE8?cb=12&rs=1&pid=ImgDetMain&o=7&rm=3" alt="Maquillaje">
         <h3>Maquillaje Profesional</h3>
         <p>Para tus eventos más importantes.</p>
         <span>$600 MXN</span>
       </div>
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1610484829299-2f2fa0b0bbd2?auto=format&fit=crop&w=500&q=80" alt="Peinado">
+        <img src="https://tse2.mm.bing.net/th/id/OIP.vcSOvqJvIPBdyR-YynGpXwHaLG?cb=12&rs=1&pid=ImgDetMain&o=7&rm=3" alt="Peinado">
         <h3>Peinado Elegante</h3>
         <p>Perfecto para ocasiones especiales.</p>
         <span>$350 MXN</span>
