--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <!-- Open Graph -->
   <meta property="og:title" content="Queen Studio">
   <meta property="og:description" content="Sitio web oficial de Queen Studio - Belleza y estilo.">
-  <meta property="og:image" content="Logo/logo.jpg">
+  <meta property="og:image" content="Logo/logo.png">
   <meta property="og:url" content="https://tusitio.netlify.app">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Queen Studio">
   <meta name="twitter:description" content="Sitio web oficial de Queen Studio - Belleza y estilo.">
-  <meta name="twitter:image" content="Logo/logo.jpg">
+  <meta name="twitter:image" content="Logo/logo.png">
 
 
 </head>
