--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Open Graph -->
   <meta property="og:title" content="Queen Studio">
   <meta property="og:description" content="Sitio web oficial de Queen Studio - Belleza y estilo.">
-  <meta property="og:image" content="https://queen-studio.netlify.app/Logo/logo.png">
+  <meta property="og:image" content="https://queen-studio.netlify.app/Logo/logo2.png">
   <meta property="og:url" content="https://queen-studio.netlify.app">
   <meta property="og:type" content="website">
 
@@ -21,7 +21,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Queen Studio">
   <meta name="twitter:description" content="Sitio web oficial de Queen Studio - Belleza y estilo.">
-  <meta name="twitter:image" content="https://queen-studio.netlify.app/Logo/logo.png">
+  <meta name="twitter:image" content="https://queen-studio.netlify.app/Logo/logo2.png">
 
 
 </head>
