--- a/servicios.html
+++ b/servicios.html
@@ -40,7 +40,7 @@
           <img src="https://tse4.mm.bing.net/th/id/OIP.dZaStbT45My77g6vDK_Q7gHaE8?rs=1&pid=ImgDetMain" class="slide">
           <img src="https://tse1.mm.bing.net/th/id/OIP.GiRuR_sYdyqVbfoRa_U00AHaE7?rs=1&pid=ImgDetMain" class="slide">
         </div>
-        <h3>Corte de Cabello</h3>
+        <h3>Pestañas</h3>
         <button class="ver-mas">Ver más</button>
         <div class="info">
           <p>Transforma tu look con cortes modernos y personalizados según tu tipo de rostro y estilo.</p>
@@ -55,7 +55,7 @@
           <img src="https://tse1.mm.bing.net/th/id/OIP.GVpj9u6KLaPq9_8p2PobTgHaE8?rs=1&pid=ImgDetMain" class="slide">
           <img src="https://tse4.mm.bing.net/th/id/OIP.-RVb6UtbhnB5aEhgpyyD4gHaE8?rs=1&pid=ImgDetMain" class="slide">
         </div>
-        <h3>Manicure & Pedicure</h3>
+        <h3>Diseño de color</h3>
         <button class="ver-mas">Ver más</button>
         <div class="info">
           <p>Disfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñas.</p>
@@ -67,10 +67,10 @@
       <div class="card">
         <div class="slider">
           <img src="https://tse1.explicit.bing.net/th/id/OIP.ecB5emskBs8f-obnft4HDgHaEK?cb=12&rs=1&pid=ImgDetMain&o=7&rm=3" class="slide active">
-          <img src="https://tse4.mm.bing.net/th/id/OIP.dZaStbT45My77g6vDK_Q7gHaE8?rs=1&pid=ImgDetMain" class="slide">
-          <img src="https://tse1.mm.bing.net/th/id/OIP.GiRuR_sYdyqVbfoRa_U00AHaE7?rs=1&pid=ImgDetMain" class="slide">
+          <img src="Logo/logo2.png" class="slide">
+          <img src="Logo/logo4.png" class="slide">
         </div>
-        <h3>Corte de Cabello</h3>
+        <h3>Alaciados, Alisados y Tratamiento capilar</h3>
         <button class="ver-mas">Ver más</button>
         <div class="info">
           <p>Transforma tu look con cortes modernos y personalizados según tu tipo de rostro y estilo.</p>
@@ -85,7 +85,66 @@
           <img src="https://tse1.mm.bing.net/th/id/OIP.GVpj9u6KLaPq9_8p2PobTgHaE8?rs=1&pid=ImgDetMain" class="slide">
           <img src="https://tse4.mm.bing.net/th/id/OIP.-RVb6UtbhnB5aEhgpyyD4gHaE8?rs=1&pid=ImgDetMain" class="slide">
         </div>
-        <h3>Manicure & Pedicure</h3>
+        <h3>Bases permanentes</h3>
+        <button class="ver-mas">Ver más</button>
+        <div class="info">
+          <p>Disfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñas.</p>
+          <a href="https://wa.me/528446002354?text=Hola%20quiero%20cotizar%20manicure%20y%20pedicure" target="_blank" class="btn-cotizar">Cotizar 💬</a>
+        </div>
+      </div>
+
+      <!-- Servicio 2 -->
+      <div class="card">
+        <div class="slider">
+         <img src="imagenes/Uñas/10.jpg" class="slide active"><img src="imagenes/Uñas/1.jpg" class="slide"><img src="imagenes/Uñas/2.jpg" class="slide"><img src="imagenes/Uñas/3.jpg" class="slide"><img src="imagenes/Uñas/4.jpg" class="slide"><img src="imagenes/Uñas/5.jpg" class="slide"><img src="imagenes/Uñas/6.jpg" class="slide"><img src="imagenes/Uñas/7.jpg" class="slide">
+          <img src="imagenes/Uñas/8.jpg" class="slide"><img src="imagenes/Uñas/9.jpg" class="slide"><img src="imagenes/Uñas/11.jpg" class="slide"><img src="imagenes/Uñas/12.jpg" class="slide"><img src="imagenes/Uñas/13.jpg" class="slide"><img src="imagenes/Uñas/14.jpg" class="slide"><img src="imagenes/Uñas/15.jpg" class="slide">
+        </div>
+        <h3>Uñas</h3>
+        <button class="ver-mas">Ver más</button>
+        <div class="info">
+          <p>Disfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñas.Disfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñasDisfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñasDisfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñasDisfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñaDisfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñas.Disfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñasDisfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñasDisfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñasDisfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñas</p>
+          <a href="https://wa.me/528446002354?text=Hola%20quiero%20cotizar%20manicure%20y%20pedicure" target="_blank" class="btn-cotizar">Cotizar 💬</a>
+        </div>
+      </div>
+
+      <!-- Servicio 2 -->
+      <div class="card">
+        <div class="slider">
+          <img src="https://tse3.mm.bing.net/th/id/OIP.i1VJtMS1tLM2YdGWfCGRiQHaE7?cb=12&rs=1&pid=ImgDetMain&o=7&rm=3" class="slide active">
+          <img src="https://tse1.mm.bing.net/th/id/OIP.GVpj9u6KLaPq9_8p2PobTgHaE8?rs=1&pid=ImgDetMain" class="slide">
+          <img src="https://tse4.mm.bing.net/th/id/OIP.-RVb6UtbhnB5aEhgpyyD4gHaE8?rs=1&pid=ImgDetMain" class="slide">
+        </div>
+        <h3>Tintes</h3>
+        <button class="ver-mas">Ver más</button>
+        <div class="info">
+          <p>Disfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñas.</p>
+          <a href="https://wa.me/528446002354?text=Hola%20quiero%20cotizar%20manicure%20y%20pedicure" target="_blank" class="btn-cotizar">Cotizar 💬</a>
+        </div>
+      </div>
+
+      <!-- Servicio 2 -->
+      <div class="card">
+        <div class="slider">
+          <img src="https://tse3.mm.bing.net/th/id/OIP.i1VJtMS1tLM2YdGWfCGRiQHaE7?cb=12&rs=1&pid=ImgDetMain&o=7&rm=3" class="slide active">
+          <img src="https://tse1.mm.bing.net/th/id/OIP.GVpj9u6KLaPq9_8p2PobTgHaE8?rs=1&pid=ImgDetMain" class="slide">
+          <img src="https://tse4.mm.bing.net/th/id/OIP.-RVb6UtbhnB5aEhgpyyD4gHaE8?rs=1&pid=ImgDetMain" class="slide">
+        </div>
+        <h3>Cejas</h3>
+        <button class="ver-mas">Ver más</button>
+        <div class="info">
+          <p>Disfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñas.</p>
+          <a href="https://wa.me/528446002354?text=Hola%20quiero%20cotizar%20manicure%20y%20pedicure" target="_blank" class="btn-cotizar">Cotizar 💬</a>
+        </div>
+      </div>
+
+            <!-- Servicio 2 -->
+      <div class="card">
+        <div class="slider">
+          <img src="https://tse3.mm.bing.net/th/id/OIP.i1VJtMS1tLM2YdGWfCGRiQHaE7?cb=12&rs=1&pid=ImgDetMain&o=7&rm=3" class="slide active">
+          <img src="https://tse1.mm.bing.net/th/id/OIP.GVpj9u6KLaPq9_8p2PobTgHaE8?rs=1&pid=ImgDetMain" class="slide">
+          <img src="https://tse4.mm.bing.net/th/id/OIP.-RVb6UtbhnB5aEhgpyyD4gHaE8?rs=1&pid=ImgDetMain" class="slide">
+        </div>
+        <h3>Maquillaje y Peinado</h3>
         <button class="ver-mas">Ver más</button>
         <div class="info">
           <p>Disfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñas.</p>
