--- a/servicios.html
+++ b/servicios.html
@@ -95,17 +95,26 @@
 
       <!-- Servicio 2 -->
       <div class="card">
-        <div class="slider">
-         <img src="imagenes/Uñas/10.jpg" class="slide active"><img src="imagenes/Uñas/1.jpg" class="slide"><img src="imagenes/Uñas/2.jpg" class="slide"><img src="imagenes/Uñas/3.jpg" class="slide"><img src="imagenes/Uñas/4.jpg" class="slide"><img src="imagenes/Uñas/5.jpg" class="slide"><img src="imagenes/Uñas/6.jpg" class="slide"><img src="imagenes/Uñas/7.jpg" class="slide">
-          <img src="imagenes/Uñas/8.jpg" class="slide"><img src="imagenes/Uñas/9.jpg" class="slide"><img src="imagenes/Uñas/11.jpg" class="slide"><img src="imagenes/Uñas/12.jpg" class="slide"><img src="imagenes/Uñas/13.jpg" class="slide"><img src="imagenes/Uñas/14.jpg" class="slide"><img src="imagenes/Uñas/15.jpg" class="slide">
-        </div>
+        <div class="slider" id="slider-unas"></div>
         <h3>Uñas</h3>
         <button class="ver-mas">Ver más</button>
         <div class="info">
-          <p>Disfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñas.Disfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñasDisfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñasDisfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñasDisfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñaDisfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñas.Disfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñasDisfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñasDisfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñasDisfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñas</p>
-          <a href="https://wa.me/528446002354?text=Hola%20quiero%20cotizar%20manicure%20y%20pedicure" target="_blank" class="btn-cotizar">Cotizar 💬</a>
+          <p>
+            Disfruta de una experiencia de belleza y relajación con nuestros servicios profesionales de uñas.  
+      Tu estilo, nuestra pasión. 💅  
+      <br><br>
+      💖 Manicure clásico o con diseño  
+      <br>✨ Pedicure spa relajante  
+      <br>🌸 Uñas acrílicas o en gel  
+      <br>🎨 Decoración personalizada  
+    </p>
+              
+          <a href="https://wa.me/528446002354?text=Hola%20quiero%20cotizar%20manicure%20y%20pedicure" target="_blank" class="btn-cotizar">
+            Cotizar 💬
+          </a>
         </div>
       </div>
+
 
       <!-- Servicio 2 -->
       <div class="card">
