--- a/index.html
+++ b/index.html
@@ -93,15 +93,11 @@
   </footer>
 
   <!-- BOTÓN FLOTANTE -->
-  <div class="whatsapp-float" id="whatsapp-float">
-    💬
-  </div>
+<a href="https://wa.me/528446002354" target="_blank" id="whatsapp-float">
+  <img src="Logo/whats_logo.PNG" alt="WhatsApp" />
+</a>
 
-  <!-- BURBUJA CONTACTO -->
-  <div class="whatsapp-popup" id="whatsapp-popup">
-    <p>Contáctanos</p>
-    <a href="https://wa.me/528446002354" target="_blank" class="btn whatsapp">WhatsApp</a>
-  </div>
+
 
 </body>
 </html>
