--- a/servicios.html
+++ b/servicios.html
@@ -169,11 +169,9 @@
   </footer>
 
   <!-- BOTÓN FLOTANTE -->
-  <div class="whatsapp-float" id="whatsapp-float">💬</div>
-  <div class="whatsapp-popup" id="whatsapp-popup">
-    <p>Contáctanos</p>
-    <a href="https://wa.me/528446002354" target="_blank" class="btn whatsapp">WhatsApp</a>
-  </div>
+<a href="https://wa.me/528446002354" target="_blank" id="whatsapp-float">
+  <img src="Logo/whats_logo.PNG" alt="WhatsApp" />
+</a>
 
 </body>
 </html>
